--- a/web/index.html
+++ b/web/index.html
@@ -9,19 +9,30 @@
 <body>
     <h1>NAM Volume Knob</h1>
     <small>Vibed by Gene Ko</small>
-    <div id="drop-zone">Drop .nam files here</div>
+    <div id="drop-zone">
+        <div id="drop-zone-instructions">Drop .nam files here</div>
+        <input id="file-input" type="file" accept=".nam" multiple style="display: none;" />
+        <button id="choose-files" type="button">Choose .nam files</button>
+        <div id="drop-zone-output"></div>
+    </div>
     <div style="display: flex; justify-content: center; align-items: center; margin-bottom: 10px;">
         <input type="radio" name="gainType" value="db" checked> dB
-        <input type="number" id="gain-db" value="3.5" step="0.1" style="margin-left: 10px;">
+        <input type="text" id="gain-db" value="3.5" style="margin-left: 10px; width: 220px;" placeholder="e.g. 3,6,7.5,9">
     </div>
     <div style="display: flex; justify-content: center; align-items: center; margin-bottom: 10px;">
         <input type="radio" name="gainType" value="linear"> Linear
-        <input type="number" id="gain-linear" value="1.5" step="0.01" disabled style="margin-left: 10px;">
+        <input type="text" id="gain-linear" value="1.5" disabled style="margin-left: 10px; width: 220px;" placeholder="e.g. 0.5,1.0,1.5">
+    </div>
+    <div style="text-align: center; margin-bottom: 10px; color: #aaa; font-size: 12px;">
+        Tip: You can enter multiple gain levels separated by commas. A .nam file will be exported for each gain level.
     </div>
     <div style="padding-top: 20px; text-align: center;">
-        <button id="process">Process and Download</button>
+        <button id="process">Download</button>
     </div>
     <div id="results"></div>
+    <div id="footer">
+        <a href="https://github.com/mrgeneko/nam_volume_knob/blob/main/README.md" target="_blank" rel="noopener noreferrer">learn more</a>
+    </div>
     <script src="vendor/fflate-0.8.2-umd.js"></script>
     <script src="app.js"></script>
 </body>
