--- a/web/index.html
+++ b/web/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>NAM Volume Knob</title>
+    <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,%3Csvg%20xmlns='http://www.w3.org/2000/svg'%20viewBox='0%200%20100%20100'%3E%3Ctext%20y='.9em'%20font-size='90'%3E%F0%9F%8E%B8%3C/text%3E%3C/svg%3E">
     <link rel="stylesheet" href="styles.css">
     <script src="nam-volume-knob-web.js"></script>
 </head>
