--- a/web/index.html
+++ b/web/index.html
@@ -25,7 +25,7 @@
         <input type="text" id="gain-linear" value="1.5" disabled style="margin-left: 10px; width: 220px;" placeholder="e.g. 0.5,1.0,1.5">
     </div>
     <div style="text-align: center; margin-bottom: 10px; color: #aaa; font-size: 12px;">
-        Tip: You can enter multiple gain levels separated by commas. A .nam file will be exported for each gain level.
+        Tip: You can enter multiple gain levels (up to +9 db) separated by commas. A .nam file will be exported for each gain level. Max boost: +9 dB (~2.82x).
     </div>
     <div style="padding-top: 20px; text-align: center;">
         <button id="process">Download</button>
