--- a/web/index.html
+++ b/web/index.html
@@ -28,6 +28,9 @@
     <div style="text-align: center; margin-bottom: 10px; color: #aaa; font-size: 12px;">
         Tip: You can enter multiple gain levels (up to +9 db) separated by commas. A .nam file will be exported for each gain level. Max boost: +9 dB (~2.82x).
     </div>
+    <div style="text-align: center; margin-bottom: 10px; color: #aaa; font-size: 12px;">
+        Please only submit NAM models with licenses that permit modifications.
+    </div>
     <div style="padding-top: 20px; text-align: center;">
         <button id="process">Download</button>
     </div>
