--- a/web/index.html
+++ b/web/index.html
@@ -26,12 +26,8 @@
         <div id="drop-zone-output"></div>
     </div>
     <div style="display: flex; justify-content: center; align-items: center; margin-bottom: 10px;">
-        <input type="radio" name="gainType" value="db" checked> dB
-        <input type="text" id="gain-db" value="6" style="margin-left: 10px; width: 220px;" placeholder="e.g. 3,6,7.5,9">
-    </div>
-    <div style="display: flex; justify-content: center; align-items: center; margin-bottom: 10px;">
-        <input type="radio" name="gainType" value="linear"> Linear
-        <input type="text" id="gain-linear" value="2.0" disabled style="margin-left: 10px; width: 220px;" placeholder="e.g. 0.5,1.0,1.5">
+        <label for="gain-db" style="margin-right: 10px;">Gain (dB):</label>
+        <input type="text" id="gain-db" value="6" style="width: 220px;" placeholder="e.g. 3,6,7.5,9">
     </div>
     <div style="text-align: center; margin-bottom: 10px; color: #aaa; font-size: 12px;">
         Tip: You can enter multiple gain levels (up to +9 db) separated by commas. A .nam file will be exported for each gain level. Max boost: +9 dB (~2.82x).
