--- a/web/index.html
+++ b/web/index.html
@@ -30,7 +30,7 @@
         <input type="text" id="gain-db" value="6" style="width: 220px;" placeholder="e.g. 3,6,7.5,9">
     </div>
     <div style="text-align: center; margin-bottom: 10px; color: #aaa; font-size: 12px;">
-        Tip: You can enter multiple gain levels (up to +9 db) separated by commas. A .nam file will be exported for each gain level. Max boost: +9 dB (~2.82x).
+        Tip: You can enter multiple gain levels (up to +9 db) separated by commas. A .nam file will be exported for each gain level. Max boost: +9 dB.
     </div>
     <div style="text-align: center; margin-bottom: 10px; color: #aaa; font-size: 12px;">
         Please only submit NAM models with licenses that permit modifications.
